trunk/Archive/38361e5d056b11f72c6f4dfeef060c12-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:5:64: error: no matching function for call to 'bind(<unresolved overloaded function type>, long unsigned int)'
     auto fn = std::bind<void*>(operator new[], sizeof(char)*100);
                                                                ^
main.cpp:5:64: note: candidates are:
In file included from /usr/include/c++/4.8/memory:79:0,
                 from main.cpp:1:
/usr/include/c++/4.8/functional:1655:5: note: template<class _Func, class ... _BoundArgs> typename std::_Bind_helper<std::__or_<std::is_integral<typename std::decay<_Tp>::type>, std::is_enum<typename std::decay<_Tp>::type> >::value, _Func, _BoundArgs ...>::type std::bind(_Func&&, _BoundArgs&& ...)
     bind(_Func&& __f, _BoundArgs&&... __args)
     ^
/usr/include/c++/4.8/functional:1655:5: note:   template argument deduction/substitution failed:
main.cpp:5:64: note:   cannot convert 'operator new []' (type '<unresolved overloaded function type>') to type 'void*&&'
     auto fn = std::bind<void*>(operator new[], sizeof(char)*100);
                                                                ^
In file included from /usr/include/c++/4.8/memory:79:0,
                 from main.cpp:1:
/usr/include/c++/4.8/functional:1682:5: note: template<class _Result, class _Func, class ... _BoundArgs> typename std::_Bindres_helper<_Result, _Func, _BoundArgs>::type std::bind(_Func&&, _BoundArgs&& ...)
     bind(_Func&& __f, _BoundArgs&&... __args)
     ^
/usr/include/c++/4.8/functional:1682:5: note:   template argument deduction/substitution failed:
main.cpp:5:64: note:   couldn't deduce template parameter '_Func'
     auto fn = std::bind<void*>(operator new[], sizeof(char)*100);
                                                                ^
